# NEU-library

./: .gitignore  Book_login.c  CMakeLists.txt  README.md  Search_display.c  admin.c  admin_test.c  backup.c  book_backup.c  book_change.c  book_delete.c  book_edit.c  book_insert.c  book_load.c  book_order_in_code.c  book_order_in_name.c  book_order_in_price.c  book_recovery.c  chain_build.c  file_io.c  help.c  information.c  lib.h  library.h  login.c  logintest.c  main.c  manage.c  order_in_price.c  people.c  person.c  person_backup.c  person_delete.c  person_edit.c  person_insert.c  person_old.c  person_order_in_id_number.c  person_order_in_name.c  person_recovery.c  reader_center.c  (+5 more)
